Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Continue_on_Error__c.field-meta.xml
<CustomField>
    <fullName>Continue_on_Error__c</fullName>
    <label>Continue on Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue deployment until blocker issue</fullName>
                <default>true</default>
                <label>Continue deployment until blocker issue</label>
            </value>
            <value>
                <fullName>Stop deployment on first issue</fullName>
                <isActive>false</isActive>
                <label>Stop deployment on first issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>