Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Main_Object__c.field-meta.xml
<CustomField>
    <fullName>Main_Object__c</fullName>
    <label>Main Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>