Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Match_Owners__c.field-meta.xml
<CustomField>
    <fullName>Match_Owners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Owners</label>
    <type>Checkbox</type>
</CustomField>