Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Match_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Record Type</label>
    <type>Checkbox</type>
</CustomField>