Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Max_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Record_Limit__c</fullName>
    <label>Max. Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>