Dummy_Package_for_scratch_org/main/default/objects/Data_Template__c/fields/Template_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Template_Source_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Source Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Data Templates</relationshipLabel>
    <relationshipName>Data_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>